--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -8,8 +8,11 @@
 </head>
 <body>
 <div class="container" align="center">
-    <div class="card" style="width: 23rem" >
-        <div> <h2>Добро пожаловать в MiniBank!</h2> </div>
+    <br><br><br>
+    <div class="card" style="width: 40rem; height: 10rem" >
+
+        <div><br> <h2>Добро пожаловать в MiniBank!</h2><br></div>
+
         <table>
             <th>
             <td>
