--- a/src/main/resources/templates/transfer.mustache
+++ b/src/main/resources/templates/transfer.mustache
@@ -11,7 +11,7 @@
         <div align="left">
             <form action="/home">
                 <input type="hidden" name="_csrf" value="{{_csrf.token}}" />
-                <input type="submit" class="btn btn-light" value="Личный кабинет">
+                <input type="submit" class="btn btn-light" value="Назад">
             </form>
             <br>
         </div>
@@ -35,6 +35,9 @@
                         <input type="submit" class="btn btn-primary my-1" value="Перевести">
                     </div>
                 </form>
+        </div>
+        <div align="right">
+            <a href="/allClients">Кому отправить деньги?</a>
         </div>
     </div>
 </div>
